# objdet

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/objdet/: __about__.py
src/objdet/YOLOV8/: make_arch.ipynb  objdet_output_nms.ipynb  yolo.py
src/objdet/YOLOV8/nn/modules/: __init__.py  block.py  conv.py  head.py
src/objdet/YOLOV8/utils/: __init__.py  nms.py  tal.py
tests/: __init__.py
