[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "objdet"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "ssjang1", email = "s104183@naver.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/ssjang1/objdet#readme"
Issues = "https://github.com/ssjang1/objdet/issues"
Source = "https://github.com/ssjang1/objdet"

[tool.hatch.version]
path = "src/objdet/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/objdet tests}"

[tool.coverage.run]
source_pkgs = ["objdet", "tests"]
branch = true
parallel = true
omit = [
  "src/objdet/__about__.py",
]

[tool.coverage.paths]
objdet = ["src/objdet", "*/objdet/src/objdet"]
tests = ["tests", "*/objdet/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
